48域04深审: 回填大纲漂移(JSONWriter编造→实为回调式解析器用于CompilerDirectives、dladdr→ElfFile自解析、行号全漂移) — 48域完结